# ZBar

./: README.md  gradle.properties  import-summary.txt  local.properties
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/main/cpp/zbar/: config.c  convert.c  error.c  image.c
app/src/main/cpp/zbar/decoder/: codabar.c  code128.c  code39.c  code93.c  databar.c  ean.c  i25.c  qr_finder.c
app/src/main/cpp/zbar/qrcode/: qrdec.c  qrdectxt.c
